# qualidade-de-dados

./: README.md  pyproject.toml
app/: funcao.py
docs/: index.md
tests/: test_func_etl.py
